--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </ul>
   </header>
   <article>
-  <h2>First Story</h2>
+  <h2>Second Story</h2>
   <p>This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. </p>
   <button>Like</button>
   </article>
