small change to index2.html

--- a/index2.html
+++ b/index2.html
@@ -108,7 +108,7 @@
   </header>
 
   <div class="first show-description">
-  <p>Current Account<br />
+  <p>Current++ Account<br />
   <small>This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test. This is a test.</small></p>
   </div>
 
