--- a/index.html
+++ b/index.html
@@ -85,4 +85,14 @@
   <button>Like</button>
   </article>
 <script>$("button").on("click", function(){alert("Thank you!")})</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-46042120-1', 'quarto2midnight.co.uk');
+  ga('send', 'pageview');
+
+</script>
 </body>
